first version to depend on both libs A and B

--- a/TestLibApp/Podfile
+++ b/TestLibApp/Podfile
@@ -8,5 +8,6 @@ target 'TestLibApp' do
   use_frameworks!
 
   # Pods for TestLibApp
-  pod 'testlibA', '0.1.0'
+  pod 'testlibA'
+  pod 'testlibB'
 end
